[gd_scene load_steps=36 format=3 uid="uid://d1wylamoulm0a"]

[ext_resource type="PackedScene" uid="uid://sdscvc02ygkb" path="res://global/state_accessor.tscn" id="1_mhcp1"]
[ext_resource type="Script" path="res://maps/map_glitch_room.gd" id="1_yt4ip"]
[ext_resource type="PackedScene" uid="uid://bfvk43cmhb3dw" path="res://character/shroomy.tscn" id="2_6uqac"]
[ext_resource type="Texture2D" uid="uid://ble1epbqjkn76" path="res://asset/map/Map04.png" id="2_iv8lm"]
[ext_resource type="PackedScene" uid="uid://d2wjm0pyfoofp" path="res://character/glorbo.tscn" id="3_f47ok"]
[ext_resource type="AudioStream" uid="uid://bbwnabfbjma4k" path="res://asset/sound/amb_glitchpad.mp3" id="3_jvrks"]
[ext_resource type="Texture2D" uid="uid://3f5bsby67w0o" path="res://asset/map/Map04_glitch.png" id="3_rr1jr"]
[ext_resource type="AudioStream" uid="uid://dh7te6dnoyf58" path="res://asset/sound/snd_glitch01.mp3" id="3_s2d75"]
[ext_resource type="PackedScene" uid="uid://cuickdfn26f5n" path="res://game_object/door.tscn" id="4_0s07b"]
[ext_resource type="AudioStream" uid="uid://cnd6i4kchfwgm" path="res://asset/sound/snd_fridgebump.wav" id="4_1kkt0"]
[ext_resource type="AudioStream" uid="uid://h86j7qsxjk5b" path="res://asset/sound/snd_glorboupset.mp3" id="4_1md11"]
[ext_resource type="AudioStream" uid="uid://b038t6mvxu852" path="res://asset/sound/snd_glitchdrawnout.mp3" id="4_dcxbg"]
[ext_resource type="PackedScene" uid="uid://cjbu7qraddyhf" path="res://game_object/collapsed_floor.tscn" id="5_oaf3x"]
[ext_resource type="PackedScene" uid="uid://ca883j1icqhk7" path="res://game_object/glitch_sauce.tscn" id="9_a8sk4"]
[ext_resource type="TileSet" uid="uid://jal28rbd1fyu" path="res://asset/object/spr_decor.tres" id="9_k8jkk"]
[ext_resource type="PackedScene" uid="uid://22ba8fccd2bl" path="res://game_object/fridge.tscn" id="10_2y0fm"]

[sub_resource type="Animation" id="Animation_fj3ew"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glorbo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Glorbo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1099, 1310)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shroomy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1100, 1151)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shroomy:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shroomy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["walk-up"],
"method": &"force_anim"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GlitchSauce:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-143, 571)]
}

[sub_resource type="Animation" id="Animation_j7ko4"]
resource_name = "init"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glorbo:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Glorbo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 4.3, 4.6, 5.5, 6.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1099, 1310), Vector2(1099, 604), Vector2(488, 577), Vector2(514, 524), Vector2(540, 590), Vector2(540, 590), Vector2(515, 106)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shroomy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1099, 1304), Vector2(1097, 1048)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shroomy:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shroomy")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": ["walk-up"],
"method": &"force_anim"
}, {
"args": [],
"method": &"disable_terrain_collision"
}, {
"args": [],
"method": &"enable_terrain_collision"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("StateAccessor")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_cutscene_state_all"
}, {
"args": [false],
"method": &"set_cutscene_state_all"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Glorbo")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.8, 1.3, 2, 4, 4.6, 5.5, 5.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": ["walk-up", 0, false],
"method": &"force_anim"
}, {
"args": [true],
"method": &"set_glitch_effect"
}, {
"args": [false],
"method": &"set_glitch_effect"
}, {
"args": ["walk-left", 0, false],
"method": &"force_anim"
}, {
"args": ["shock-left", 1, true],
"method": &"force_anim"
}, {
"args": ["shock-left", 0, false],
"method": &"force_anim"
}, {
"args": ["walk-up", 0, false],
"method": &"force_anim"
}, {
"args": [true],
"method": &"set_glitch_effect"
}]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("GlitchSauce:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-143, 571), Vector2(422, 571)]
}
tracks/8/type = "audio"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Glorbo/AudioStreamPlayer2D")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"clips": [{
"end_offset": 0.0500547,
"start_offset": 0.644182,
"stream": ExtResource("3_s2d75")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_1kkt0")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_1md11")
}, {
"end_offset": 0.9698,
"start_offset": 0.0,
"stream": ExtResource("4_dcxbg")
}],
"times": PackedFloat32Array(0.8, 4, 4.6, 5.5)
}
tracks/8/use_blend = true
tracks/9/type = "audio"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Glorbo/AudioStreamPlayer2D2")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"clips": [{
"end_offset": 4.76924,
"start_offset": 8.0,
"stream": ExtResource("3_jvrks")
}],
"times": PackedFloat32Array(0)
}
tracks/9/use_blend = true
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("GlitchSauce:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 4.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("walldecor/Fridge")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"open_fridge"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_15w33"]
_data = {
"RESET": SubResource("Animation_fj3ew"),
"init": SubResource("Animation_j7ko4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ayrt0"]
size = Vector2(36, 952)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ko2mj"]
size = Vector2(39, 935)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_api4j"]
size = Vector2(1177, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aw8qm"]
size = Vector2(1200, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrn3t"]
size = Vector2(1022, 126)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cnmna"]
size = Vector2(837, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5frr8"]
size = Vector2(97, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_km41k"]
size = Vector2(832, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_epg4l"]
size = Vector2(83, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xmts"]
size = Vector2(802, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwbxq"]
size = Vector2(72, 130)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s81e1"]
size = Vector2(50, 852)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqe4v"]
size = Vector2(49, 863)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sdb3e"]
size = Vector2(135, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nkg0"]
size = Vector2(23, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3h2fo"]
size = Vector2(20, 116)

[node name="map_glitch_room" type="Node2D"]
script = ExtResource("1_yt4ip")

[node name="StateAccessor" parent="." instance=ExtResource("1_mhcp1")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1269, 1282)
limit_left = 0
limit_top = 0
limit_right = 1432
limit_bottom = 1432

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_15w33")
}

[node name="Glitch_Bounds" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Glitch_Bounds"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Glitch_Bounds/StaticBody2D"]
position = Vector2(148, 785)
shape = SubResource("RectangleShape2D_ayrt0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Glitch_Bounds/StaticBody2D"]
position = Vector2(1293.5, 788.5)
shape = SubResource("RectangleShape2D_ko2mj")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Glitch_Bounds/StaticBody2D"]
position = Vector2(726, 318)
shape = SubResource("RectangleShape2D_api4j")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Glitch_Bounds/StaticBody2D"]
position = Vector2(725, 1258)
shape = SubResource("RectangleShape2D_aw8qm")

[node name="Bounds" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Bounds"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(729, 460)
shape = SubResource("RectangleShape2D_nrn3t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(633.5, 684)
shape = SubResource("RectangleShape2D_cnmna")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(267.5, 908)
shape = SubResource("RectangleShape2D_5frr8")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(636, 1133)
shape = SubResource("RectangleShape2D_km41k")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(1189.5, 684)
shape = SubResource("RectangleShape2D_epg4l")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(813, 908)
shape = SubResource("RectangleShape2D_5xmts")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(1184, 1133)
shape = SubResource("RectangleShape2D_xwbxq")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(227, 799)
shape = SubResource("RectangleShape2D_s81e1")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(1204.5, 790.5)
shape = SubResource("RectangleShape2D_qqe4v")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Bounds/StaticBody2D"]
position = Vector2(1102, 1204)
shape = SubResource("RectangleShape2D_sdb3e")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(716, 716)
scale = Vector2(2, 2)
texture = ExtResource("2_iv8lm")

[node name="bg-glitched" type="Sprite2D" parent="background"]
visible = false
texture = ExtResource("3_rr1jr")

[node name="walldecor" type="Node2D" parent="."]

[node name="CollapsedFloor1" parent="walldecor" instance=ExtResource("5_oaf3x")]
visible = false
position = Vector2(364, 910)

[node name="CollapsedFloor2" parent="walldecor" instance=ExtResource("5_oaf3x")]
visible = false
position = Vector2(1100, 686)

[node name="TileMap" type="TileMap" parent="walldecor"]
position = Vector2(-4, 12)
scale = Vector2(2, 2)
tile_set = ExtResource("9_k8jkk")
format = 2
layer_0/tile_data = PackedInt32Array(983048, 393217, 8, 1048584, 393217, 9, 983049, 655361, 8, 1048585, 655361, 9, 983050, 720897, 8, 1048586, 720897, 9, 983051, 524289, 8, 1048587, 524289, 9, 1507351, 1048577, 9, 1441816, 1114113, 8, 1507352, 1114113, 9, 1441814, 393217, 8, 1507350, 393217, 9, 1507353, 524289, 9, 1900580, 589825, 9, 1966116, 589825, 10, 1966088, 655361, 10, 1966089, 720897, 10, 1966093, 196609, 10, 1966094, 262145, 10, 1966095, 327681, 10, 1048595, 1048577, 9, 983060, 1114113, 8, 1048596, 1114113, 9, 983061, 524289, 8, 1048597, 524289, 9, 1835041, 524289, 4, 1835042, 589825, 4, 1835024, 327681, 0, 1835025, 393217, 0, 1376267, 655361, 4, 1376268, 720897, 4, 1835026, 1245185, 3, 1835027, 1310721, 3, 1376286, 786433, 1, 917531, 131073, 2, 983067, 131073, 3, 1376274, 458753, 0, 917540, 131073, 0, 1376271, 262145, 2, 1441807, 262145, 3, 1900573, 327681, 3, 1835037, 327681, 2, 1835017, 196609, 3, 1376292, 262145, 3, 1900570, 262145, 2, 1966101, 393217, 10, 1966102, 458753, 10, 1966103, 524289, 10, 1376265, 131073, 1, 917524, 655361, 0, 917525, 720897, 0, 1048598, 196609, 14, 1179656, 196609, 14, 1114140, 131073, 14, 1638408, 1, 14, 1966098, 1, 14, 2097181, 1, 14, 1966114, 65537, 14, 1966115, 131073, 14, 1048593, 1, 14, 1048594, 65537, 14, 1179684, 131073, 14, 1638432, 1, 14, 1507348, 131073, 14, 1507341, 65537, 14, 1638424, 1, 14, 1179662, 65537, 14, 1966104, 65537, 14, 2097166, 131073, 14, 2097161, 196609, 14, 983052, 262145, 2, 917521, 262145, 3, 917512, 196609, 3, 917536, 196609, 3, 1376281, 196609, 3, 1900557, 327681, 3, 1835030, 262145, 3, 983074, 655361, 8, 1048610, 655361, 9, 983075, 720897, 8, 1048611, 720897, 9, 1441802, 655361, 8, 1507338, 655361, 9, 1441803, 720897, 8, 1507339, 720897, 9, 1441801, 393217, 8, 1507337, 393217, 9, 1441817, 524289, 8, 1507347, 131073, 10, 1507345, 1, 10, 1507346, 65537, 10, 1376288, 131073, 1, 1835035, 327681, 1, 1835036, 393217, 1)

[node name="Fridge" parent="walldecor" instance=ExtResource("10_2y0fm")]
position = Vector2(437, 553)
scale = Vector2(2, 2)

[node name="Shroomy" parent="." instance=ExtResource("2_6uqac")]
position = Vector2(1100, 1151)

[node name="Glorbo" parent="." instance=ExtResource("3_f47ok")]
visible = false
position = Vector2(1099, 1310)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Glorbo"]
position = Vector2(-370, 43)

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Glorbo"]
volume_db = -15.0

[node name="Door" parent="." instance=ExtResource("4_0s07b")]
visible = false
position = Vector2(1100, 1223)
next_map_path = "res://maps/map_hub.tscn"

[node name="Triggers" type="Node2D" parent="."]

[node name="trg_floor1" type="Area2D" parent="Triggers"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/trg_floor1"]
position = Vector2(462.5, 797)
shape = SubResource("RectangleShape2D_5nkg0")

[node name="trg_floor2" type="Area2D" parent="Triggers"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Triggers/trg_floor2"]
position = Vector2(981, 573)
shape = SubResource("RectangleShape2D_3h2fo")

[node name="GlitchSauce" parent="." instance=ExtResource("9_a8sk4")]
visible = false
position = Vector2(-143, 571)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
